--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.servlet.multipart.max-file-size =200KB
-spring.servlet.multipart.max-request-size =200KB
-
+#spring.servlet.multipart.max-file-size =200KB
+#spring.servlet.multipart.max-request-size =200KB
+file.size = 50
 
 project.image=images/
-server.port=8082
